// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`native <Text /> when Text with newline children rendered match snapshot 1`] = `
<Text
  style={
    Object {
      "alignContent": "stretch",
      "color": "#0C0C0C",
      "display": "flex",
      "flexDirection": "column",
      "flexShrink": 1,
      "fontFamily": "Pretendard",
      "fontSize": 34,
      "fontWeight": "700",
      "lineHeight": 44,
    }
  }
>
  Some
  <Text
    style={
      Object {
        "alignContent": "stretch",
        "display": "flex",
        "flexDirection": "column",
        "flexShrink": 1,
      }
    }
  >
    

  </Text>
  Thing
</Text>
`;

exports[`native <Text /> when title1 Text rendered match snapshot 1`] = `
<Text
  style={
    Object {
      "alignContent": "stretch",
      "color": "#0C0C0C",
      "display": "flex",
      "flexDirection": "column",
      "flexShrink": 1,
      "fontFamily": "Pretendard",
      "fontSize": 34,
      "fontWeight": "700",
      "lineHeight": 44,
    }
  }
>
  Something
</Text>
`;
